--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>My Resume</title>
+  <meta name="viewport" content="width=device-width, intial-scale=1.0">
+  <title>Charlie DiFranco - Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,77 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="top-section">
+    <div class="name">
+      <div class="headshot"><img src="images/linked-in.jpeg" alt=""></div>
+      <h1>Charlie DiFranco - Web Dev</h1>
+      <p class="caption">Technology is my jam!</p>
+    </div>
+    <div class="cta">
+      <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website</p>
+      <button><a>Let's Team Up</a></button>
+    </div> <!--closes CTA section-->
+  </section> <!--closes top-section-->
+
+  <section class="middle-section">
+    <div class="intro">
+      <h2>Listen Up..</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ab, similique enim a at eaque iusto quas ex? Exercitationem reiciendis asperiores sunt praesentium reprehenderit sapiente ad obcaecati. Dignissimos, deleniti earum.Quaerat praesentium, ipsum tempora veniam nesciunt magni nihil adipisci dolores magnam sit! Sapiente, voluptatem itaque possimus ratione qui veniam dolores. Sequi distinctio numquam dolorem minima expedita alias dicta odit laborum.</p>
+    </div> <!--closes intro div-->
+    <div class="skills">
+      <h2>Skills:</h2>
+      <ul>
+        <li>Excel</li>
+        <li>CSS</li>
+        <li>HTML</li>
+        <li>Javascript</li>
+        <li>Accounting and Finance</li>
+      </ul>
+    </div><!--closes skills div-->
+  </section><!-- closes middle section-->
+
+  <section class="bottom-section">
+    <h2>Work History</h2>
+    <div class="work-history">
+      <ul class="top-row">
+        <li>Yrs</li>
+        <li>Company</li>
+        <li>Title</li>
+        <li>Period of Employment</li>
+      </ul>
+      <ul class="experience">
+        <li>1</li>
+        <li>Deloitte</li>
+        <li>Business Valuation Consultant</li>
+        <li>October 2017 - December 2019</li>
+      </ul>
+      <ul class="experience">
+        <li>2</li>
+        <li>Deloitte</li>
+        <li>Business Valuation Intern</li>
+        <li>January 2016 - March 2016</li>
+      </ul>
+      <ul class="experience">
+        <li>3</li>
+        <li>Mesirow Financial</li>
+        <li>Accounting Intern</li>
+        <li>June 2015 - August 2015</li>
+      </ul>
+    </div>
+  </section>
+  <footer>
+    <p>Copyright Awesomeness 2019</p>
+  </footer>
+
 </body>
 </html>
