completed basic layout

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <section class="top-section">
     <div class="name">
       <div class="headshot"><img src="images/linked-in.jpeg" alt=""></div>
-      <h1>Charlie DiFranco - Web Dev</h1>
-      <p class="caption">Technology is my jam!</p>
+      <h1>Charlie DiFranco</h1>
+      <p class="caption">Aspiring software engineer</p>
     </div>
     <div class="cta">
       <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website</p>
@@ -38,7 +38,7 @@
 
   <section class="middle-section">
     <div class="intro">
-      <h2>Listen Up..</h2>
+      <h2>About Me</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ab, similique enim a at eaque iusto quas ex? Exercitationem reiciendis asperiores sunt praesentium reprehenderit sapiente ad obcaecati. Dignissimos, deleniti earum.Quaerat praesentium, ipsum tempora veniam nesciunt magni nihil adipisci dolores magnam sit! Sapiente, voluptatem itaque possimus ratione qui veniam dolores. Sequi distinctio numquam dolorem minima expedita alias dicta odit laborum.</p>
     </div> <!--closes intro div-->
     <div class="skills">
@@ -82,6 +82,25 @@
       </ul>
     </div>
   </section>
+
+  <section class="contact-form">
+    <h1>Contact Me:</h1>
+    <form action="">
+      <div class="name">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
+      </div>
+      <div class="email">
+        <label for="email">Email Address:</label>
+        <input type="text" id="email" name="email">
+      </div>
+      <div class="message-area">
+        <label for="message">Message:</label>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+      </div>
+    </form>
+  </section>
+
   <footer>
     <p>Copyright Awesomeness 2019</p>
   </footer>
